--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,12 @@ audio {
 
 /* Icons */
 
+.icon {
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+}
+
 .icon-twitter {
     display: inline-block;
     background: url(/img/twitter.png) no-repeat;
