Anpassungen an Reihenfolge der Vorherigen Sendungen und optischen Tweaks

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ h6 {
     text-decoration: underline;
 }
 
+hr {
+    border-color: #ccc;
+}
+
 /* Header */
 
 header {
@@ -78,6 +82,26 @@ section {
 
 .introduction {
     text-align: justify;
+}
+
+
+
+/* Section: Previous Shows; */
+
+.prevshow {
+    
+}
+
+.prevshow time {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    font-weight: normal;
+}
+
+hr.prevshow-spacer {
+    width: 250px;
+    margin-left: 50px;
 }
 
 
