--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,9 @@ audio {
 
     color: black;
     background-color: #E8DC1E;
+
+    font-family: 'Share Tech Mono', monospace;
+    font-weight: bold;
 }
 
 @media (min-width: 768px) {
