--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,6 @@ header {
 
     transition: 1s ease-in-out;
     transform: rotate(-6deg);
-    animation: slide 45s linear infinite;
 
     outline: 1px solid #333;
     background: url(/img/cyber_plain.png) repeat-x;
@@ -53,10 +52,13 @@ header {
 
 @keyframes slide {
   0% {
-    background-position-x: 0px;
+    background-position-x: 0vw;
+  }
+  50% {
+    background-position-x: 100vw;
   }
   100% {
-    background-position-x: 738px;
+    background-position-x: 0vw;
   }
 }
 
@@ -84,6 +86,7 @@ header {
         height: 100px;
 
         transform: rotate(-6deg) translate(-10px);
+        animation: slide 30s ease-in-out infinite;
     }
     #morningshow {
         top: 160px;
